# boa-manager

./: .dockerignore  Dockerfile  LICENSE  Pipfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
boa_manager/: boa_manager.py
boa_manager/api/: clusters.py  jobs.py  kubernetes.py  organizations.py
boa_manager/api/db/: session.py
boa_manager/db/: __init__.py  database.py
boa_manager/db/models/: jobs.py  organizations.py
deploy/manifests/: boa-api-docs.yaml  boa-manager.yaml  boa-webserver.yaml  development-env-client.yaml  development-env-ui.yaml  development-env.yaml  postgresql.yaml  rbac.yaml  redis.yaml
deploy/sql/: setup.sql
src/: entrypoint.py
src/boa_manager/: boa_manager.py  entrypoint.py  tailwind.config.js
src/boa_manager/api/: clusters.py  jobs.py  kubernetes.py  organizations.py
src/boa_manager/api/templates/: swagger.yaml
src/boa_manager/db/: database.py
src/boa_manager/db/models/: clusters.py  jobs.py  organizations.py
src/boa_manager/static/src/: main.css
src/boa_manager/static/src/swaggerui/: openapi.json
src/boa_manager/templates/: base.html  index.html  sidebar.html
src/boa_manager/templates/clusters/: create.html  list.html
src/boa_manager/templates/jobs/: create.html  dashboard.html  executions.html  list.html  search.html
src/boa_manager/templates/organizations/: create.html  list.html
src/boa_manager/templates/swaggerui/: swaggerui.html
src/boa_manager/utils/: string_utils.py
src/templates/clusters/: create.html
src/templates/jobs/: create.html
src/templates/organizations/: list.html
