[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boa_manager"
version = "0.0.1"
authors = [
  { name="Alejandro Velasco", email="alejandro.velasco1423@gmail.com" },
]
description = "Boa Server Manager Componennt"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/alejandro-velasco/boa-manager"
"Bug Tracker" = "https://github.com/alejandro-velasco/boa-manager/issues"